# uniprocess-os

./: Cargo.toml  LICENSE  README.md
commands/ls/: Cargo.toml
commands/ls/src/: main.rs
commands/mkdir/: Cargo.toml
commands/mkdir/src/: main.rs
commands/ps/: Cargo.toml
commands/ps/src/: main.rs
commands/pwd/: Cargo.toml
commands/pwd/src/: main.rs
commands/rm/: Cargo.toml
commands/rm/src/: main.rs
commands/touch/: Cargo.toml
commands/touch/src/: main.rs
src/: main.rs
src/process/: mod.rs  process_manager.rs
src/test/new_dir/: file1.txt
